# ArcInfer

./: .gitignore  Anchor.toml  Arcium.toml  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
app/: next.config.ts  package.json
app/public/model/: pca.json
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/components/: InferenceForm.tsx  MPCProgressTracker.tsx  ResultDisplay.tsx
app/src/lib/: arcium.ts  constants.ts  debug.ts  embedding.ts  idl.json  networks.ts  pca.ts  pending.ts  program.ts
app/src/lib/shims/: crypto.ts  fs.ts
app/src/types/: onnxruntime-web.d.ts
crates/arcinfer-core/: Cargo.toml
crates/arcinfer-core/src/: classifier.rs  fixed_point.rs  lib.rs  nn.rs  pca.rs  quantize.rs
crates/arcinfer-inference/: Cargo.toml
crates/arcinfer-inference/src/: embedding.rs  lib.rs  pipeline.rs  tokenizer.rs
crates/arcinfer-pipeline/: Cargo.toml
crates/arcinfer-pipeline/src/: lib.rs  weights.rs
docs/: 00-overview.md  01-fixed-point-arithmetic.md  02-neural-network-layers.md  03-build-journal.md  04-quantization-pca-classifier.md  05-inference-pipeline.md  06-setup-and-deploy.md  arcium-developers-rag-notes.md  arcium-examples-reference.md
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs  weights.rs
models/: classifier_weights.json  metadata.json
programs/arcinfer/: Cargo.toml
programs/arcinfer/src/: lib.rs
scripts/: generate_circuit_weights.py
tests/: arcinfer.ts
training/: train.py
