[workspace]
members = [
    "crates/arcinfer-core",
    "crates/arcinfer-inference",
    "crates/arcinfer-pipeline",
    "encrypted-ixs",
    "programs/arcinfer",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
anchor-attribute-program = { path = "vendor/anchor-attribute-program-0.32.1" }
