[package]
name = "arcinfer-pipeline"
version = "0.1.0"
edition = "2021"
description = "End-to-end pipeline: text -> tokens -> embedding -> PCA -> quantize -> classify"

[dependencies]
arcinfer-core = { path = "../arcinfer-core" }
arcinfer-inference = { path = "../arcinfer-inference" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
